--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 !scripts/*
 !src/
 !src/*
-!src/wvfm_osc/lut/*
+!src/wvfm_osc/lut
 !src/wvfm_osc/sv
 
 # Allow for Verilog and System Verilog files
@@ -23,3 +23,4 @@
 
 # Allow for .cpp and .hex files
 !*.cpp
+!*.hex
