change project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,25 @@
 # Exclude all files, then include in only the required ones, or by hand
 *
+
+# Allow scripts
 !scripts/
 !scripts/*/
-!src/
-!src/*/
 
-!src/wvfm_osc/lut
-!src/wvfm_osc/sv
+# Allow source directory
+!src/
+!src/device/
+!src/device/submodules/
+!src/includes/
+!src/midi/
+!src/dispatcher/
+!src/pipeline/
+!src/mixer/
+
+!src/*/lut/
+
+!src/*/tests/
+!src/*/tests/simulation/
+!src/*/tests/synthesis/
 
 # Allow for gitignore files
 !.gitignore
@@ -19,6 +32,9 @@
 !*.v
 !*.vh
 
+# Allow for Altera IP files
+!*.qip
+
 # Allow for Matlab files
 !*.m
 
@@ -26,7 +42,8 @@
 !*.cpp
 !*.hex
 
-# Explicitly ignore project files
-*.qpf
-*.qsf
-*.qws
+# Allow for memory files
+!*.vm
+
+# Allow for project assignment files
+!*.qsf
