--- a/src/conFFTi.qsf
+++ b/src/conFFTi.qsf
@@ -1115,7 +1115,11 @@ set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 
-set_global_assignment -name SYSTEMVERILOG_FILE chip_interface.sv
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE device/dac_driver.sv
+set_global_assignment -name VERILOG_FILE device/AudioPLL.v
+set_global_assignment -name QIP_FILE device/AudioPLL.qip
 set_global_assignment -name SYSTEMVERILOG_FILE conFFTi.sv
+set_global_assignment -name SYSTEMVERILOG_FILE chip_interface.sv
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
