--- a/src/conFFTi.qsf
+++ b/src/conFFTi.qsf
@@ -1117,8 +1117,9 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE device/uart_driver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE device/dac_driver.sv
-set_global_assignment -name VERILOG_FILE device/AudioPLL.v
+set_global_assignment -name VERILOG_FILE device/AudioPLL.v -library AudioPLL
 set_global_assignment -name QIP_FILE device/AudioPLL.qip
 set_global_assignment -name SYSTEMVERILOG_FILE conFFTi.sv
 set_global_assignment -name SYSTEMVERILOG_FILE chip_interface.sv
