--- a/src/conFFTi.qsf
+++ b/src/conFFTi.qsf
@@ -1117,6 +1117,10 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
+set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name SYSTEMVERILOG_FILE midi/midi_decoder.sv
+set_global_assignment -name SYSTEMVERILOG_FILE midi/parameter_control.sv
 set_global_assignment -name SYSTEMVERILOG_FILE device/uart_driver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE device/dac_driver.sv
 set_global_assignment -name VERILOG_FILE device/AudioPLL.v -library AudioPLL
