--- a/src/conFFTi.qsf
+++ b/src/conFFTi.qsf
@@ -1119,6 +1119,12 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name SYSTEMVERILOG_FILE pipeline/sine.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pipeline/pulse.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pipeline/divide.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pipeline/triangle.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pipeline/oscillator.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pipeline/pipeline.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mixer/mixer.sv
 set_global_assignment -name SYSTEMVERILOG_FILE dispatcher/dispatcher.sv
 set_global_assignment -name SYSTEMVERILOG_FILE dispatcher/polyphony.sv
