Integrated adsr. Extend max time to 2s

--- a/src/pipeline/tests/simulation/Makefile
+++ b/src/pipeline/tests/simulation/Makefile
@@ -5,4 +5,4 @@ sine_test: sine_test.sv ../../sine.sv
 pulse_test: pulse_test.sv ../../pulse.sv
 triangle_test: triangle_test.sv ../../triangle.sv
 oscillator_test: oscillator_test.sv ../../oscillator.sv ../../divide.sv ../../sine.sv ../../triangle.sv ../../pulse.sv
-envelope_test: envelope_test.sv ../../envelope.sv
+envelope_test: envelope_test.sv ../../envelope.sv ../../divide.sv
