--- a/src/dispatcher/tests/simulation/Makefile
+++ b/src/dispatcher/tests/simulation/Makefile
@@ -2,3 +2,4 @@ include ../../../../template.mk
 
 search_test: search_test.sv ../../search.sv
 polyphony_test: polyphony_test.sv ../../polyphony.sv ../../search.sv
+recorder_test: recorder_test.sv ../../recorder.sv
